...
                }
            } label: {
                Image(systemName: "ellipsis.circle")
                    .font(.system(size: 18))
                    .frame(width: 28, height: 28)
            }
            .accessibilityIdentifier("more-menu-button")
            .accessibilityLabel("More")
#endif
        }
        .padding(.horizontal, 6)
        .padding(.vertical, horizontalSizeClass == .regular ? 3 : 6)
    }
...
